# neorusticus

./: .gitignore  Cargo.toml  LICENSE-APACHE  readme.md  readme_optimization.md
benches/: engine_bench.rs
examples/: arithmetic.rs  basic_usage.rs  debug_list_test.rs  debug_predicate.rs  interactive.rs
misc/: prolog_essentials.md
src/: ast.rs  ast_tests.rs  builtins.rs  builtins_tests.rs  engine.rs  engine_tests.rs  error.rs  error_tests.rs  lexer.rs  lexer_tests.rs  lib.rs  lib_tests.rs  parser.rs  parser_tests.rs  unification.rs  unification_tests.rs  utils.rs  utils_tests.rs
tests/: arithmetic_tests.rs  error_tests.rs  integration_tests.rs  list_tests.rs  parsing_tests.rs
